# cargo-pack

./: .gitignore  Cargo.toml  readme.md
pack/: Cargo.toml
pack/src/: compilation.rs  main.rs  pack.rs
src/: compilation.rs  main.rs  obfuscation.rs  pack.rs  utils.rs
test-crate/src/: main.rs
unpack/: Cargo.toml  build.rs
unpack/src/: constants.rs  deobfuscation.rs  loader.rs  main.rs
unpack/src/loader/: load.rs  mod.rs
