[package]
name = "cargo-unpack"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
brotli-decompressor = "2.3.2"
rand = "0.8.5"
chacha20 = "0.9.0"
konst = { version = "0.2.15", features = ["parsing_no_proc"] }
static_assertions = "1.1.0"
memexec = "0.2.0"

[build-dependencies]
object = "0.29.0"

# [features]
# no-aslr = []